# age_patterns

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/: 01_NetworkX_igraph.ipynb  02_Liebeskind_age_classes.ipynb  02_age_gene_classes.ipynb  03_GO_terms.ipynb  03_GenOrigin_age_classes.ipynb  04_BLAST_age_classes.ipynb  04_GenOrigin_age_classes.ipynb  04_phylostratr_usage.R  04_phylostratr_usage.Rmd  05_Random_networks.ipynb  05_Report_for_blast_ages.ipynb  05_blast_age_classes.ipynb  06_BLAST_SwissTree.ipynb  06_network_using_blast_ages.ipynb  07_GO_SemSim.R  08_GOgraph_iter.ipynb  Age_project 1.ipynb
data/: main_HUMAN.csv  trrust_rawdata.human_classes.csv  yeast_classes.csv
data/01_GRNs/: trrust_rawdata.mouse.tsv  trrust_rawdata.mouse_classes.csv
data/02_age_classes/: human_UniProtMapping.txt  human_gene_ages_L.csv  mouse_ID_UniProt.txt  mouse_gene_ages_L.csv  trrust_rawdata.human_classes.csv  trrust_rawdata.mouse_classes.csv  yeast_classes.csv  yeast_gene_ages_L.csv
data/02_protein_ages/: main_MOUSE.csv  main_YEAST.csv
data/03_GenOrigin/: Homo_sapiens.csv  Homo_sapiens_id_gene.csv  Mus_musculus.csv  Mus_musculus_id_gene.csv  human_classes_GO.csv  human_gene_ages_GO.csv  mouse_classes_GO.csv  mouse_gene_ages_GO.csv  yeast_classes_GO.csv  yeast_gene_ages_GO.csv
data/04_TOL/: Eukaryota_taxidlist.txids  Eukaryota_tree_nodes.txt  Eukaryota_tree_nodes_taxID.txt
data/06_swiss_tree_blast/: Reference_proteomes.txt  small_tree.nwk  speciestree.nhx  swisstree.nhx  taxid_terminal_nodes.txids  tree_terminal_nodes.txt
data/GI/: 31033.gi  33169.gi  3702.gi  (+9 more)
(+110 files in other folders)
