[tool.poetry]
name = "age_patterns"
version = "0.1"
description = "Age Patterns Project."
repository = "https://github.com/Freddsle/age_patterns/"
authors = ["Yuliya Burankova"]

[tool.poetry.dependencies]
python = ">3.10,<3.11"
networkx = {extras = ["default"], version = "^2.6.3"}
pandas = "^1.4.1"
matplotlib = "^3.5.1"
biopython = "^1.79"
seaborn = "^0.11.2"
ete3 = "^3.1.2"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"



[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
